--- a/src/main/resources/templates/_navbar.html
+++ b/src/main/resources/templates/_navbar.html
@@ -1,4 +1,26 @@
-<nav  th:fragment="navbar" class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
+<!--
+  ~ Copyright (c) 2017 Piper Dougherty, Adam Reichanadter, De'Shawn Presley, Tyler Schlomer, Daniel Morgan
+  ~
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ in the Software without restriction, including without limitation the rights
+  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ furnished to do so, subject to the following conditions:
+  ~
+  ~ The above copyright notice and this permission notice shall be included in all
+  ~ copies or substantial portions of the Software.
+  ~
+  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  ~ SOFTWARE.
+  -->
+
+<nav th:fragment="navbar" class="navbar fixed-top navbar-toggleable-md navbar-light bg-faded">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
             data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
             aria-label="Toggle navigation">
@@ -25,7 +47,7 @@
         </ul>
         <!---->
         <form id="search-form" class="form-inline my-2 my-lg-0 mr-auto" >
-            <input id="query-text" class="form-control mr-sm-2"  style="width: 50vw;" type="text" placeholder="Search"/>
+            <input id="query-text" class="form-control mr-sm-2" style="width: 50vw;" type="text" placeholder="Search"/>
             <button class="btn my-2 my-sm-0" type="submit">Search</button>
         </form>
 
@@ -53,6 +75,8 @@
             integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn"
             crossorigin="anonymous"></script>
     <script>
+
+        //On click of the search button, navigate to the search page with the query entered into the text box.
         jQuery(document).ready(function () {
             var $searchForm = $("#search-form");
             $searchForm.submit(function (e) {
