--- a/src/main/resources/templates/create-recipe.html
+++ b/src/main/resources/templates/create-recipe.html
@@ -1,4 +1,26 @@
 <!DOCTYPE html>
+<!--
+  ~ Copyright (c) 2017 Piper Dougherty, Adam Reichanadter, De'Shawn Presley, Tyler Schlomer, Daniel Morgan
+  ~
+  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
+  ~ of this software and associated documentation files (the "Software"), to deal
+  ~ in the Software without restriction, including without limitation the rights
+  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+  ~ copies of the Software, and to permit persons to whom the Software is
+  ~ furnished to do so, subject to the following conditions:
+  ~
+  ~ The above copyright notice and this permission notice shall be included in all
+  ~ copies or substantial portions of the Software.
+  ~
+  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+  ~ SOFTWARE.
+  -->
+
 <html xmlns:th="http://www.w3.org/1999/xhtml" lang="en">
 <head>
     <meta charset="UTF-8"/>
@@ -88,14 +110,13 @@
         crossorigin="anonymous"></script>
 
 <script>
+
+
+    // Handle the increase and decrease of ingredients. Submit form on completion.
     jQuery(document).ready(function () {
         var index = 1;
         var count = 0;
 
-
-
-
-        var $recipeForm = $("#recipe-form");
         var $saveButton = $("#save-button");
         var $ingredientContainer = $("#ingredient-container");
         var $ingredientButton = $("#ingredient-button");
@@ -133,7 +154,10 @@
             count++;
         }
 
+        //Submit the recipe to the server with all of the ingredients.
         function submit() {
+
+            //Build the JSON for sending.
             var recipeInfo = {
                 name: $("#inputRecipeName").val(),
                 description: $("#inputRecipeDescription").val(),
@@ -143,11 +167,11 @@
             };
 
             var successHandler = function (data, textStatus, jqXHR) {
-                console.log("Completed.")
+                console.log("Completed.");
               window.location = "/profile";
             };
 
-
+            // Send via AJAX.
             $.ajax({
                 url: '/recipe/new?_submit',
                 method: 'post',
@@ -178,6 +202,7 @@
             }
         }
 
+        //Add the first ingredient to the list.
         duplicateAndAppend();
     })
 </script>
